fix weapon overwrite

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -587,12 +587,12 @@
                 <input name="attr_display_limit" type="hidden" value="Mental"/>
                 <input name="attr_display_attribute" type="hidden" value="Logic"/>
                 <input name="attr_dicepool" type="hidden" value="0"/>
-                <input class="settings-flag" name="attr_flag" type="hidden" value="settings" title="@{repeating_know_${x}_flag}"/>
+                <input class="settings-flag" name="attr_flag" type="hidden" value="settings" title="@{repeating_knowledge_${x}_flag}"/>
                 <div class="buttons">
                   <button class="eclipse" name="roll_skill" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[((@{dicepool}+@{attribute})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{display_limit}}}"><span name="attr_skill"></span></button>
                   <button class="eclipse" name="roll_specialization" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[((@{dicepool}+@{attribute}+2)+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Spec: @{specialization}, @{display_limit}}}"><span name="attr_specialization"></span></button>
-                </div><span class="text-align-center" name="attr_display_rating" title="@{repeating_know_${x}_display_rating}"></span>
-                <select class="attribute-select" name="attr_attribute" title="@{repeating_know_${x}_attribute}">
+                </div><span class="text-align-center" name="attr_display_rating" title="@{repeating_knowledge_${x}_display_rating}"></span>
+                <select class="attribute-select" name="attr_attribute" title="@{repeating_knowledge_${x}_attribute}">
                   <option data-i18n="body" value="@{body}">Body</option>
                   <option data-i18n="agility" value="@{agility}">Agility</option>
                   <option data-i18n="reaction" value="@{reaction}">Reaction</option>
@@ -604,7 +604,7 @@
                   <option data-i18n="magic" value="@{magic}">Magic</option>
                   <option data-i18n="resonance" value="@{resonance}">Resonance</option>
                 </select>
-                <select class="limit-select" name="attr_limit" value="physical_limit" title="@{repeating_know_${x}_limit}">
+                <select class="limit-select" name="attr_limit" value="physical_limit" title="@{repeating_knowledge_${x}_limit}">
                   <option value="none">-</option>
                   <option data-i18n="mental" value="@{mental_limit}" selected="selected">Mental</option>
                   <option data-i18n="physical" value="@{physical_limit}">Physical</option>
@@ -619,19 +619,19 @@
                 <div class="collapse"><span name="attr_notes"></span></div>
                 <div class="settings">
                   <label data-i18n-title="skill" title="skill">
-                    <input name="attr_skill" placeholder="knowledge" type="text" title="@{repeating_know_${x}_skill}"/>
+                    <input name="attr_skill" placeholder="knowledge" type="text" title="@{repeating_knowledge_${x}_skill}"/>
                   </label>
                   <label data-i18n-title="rating" title="rating">
-                    <input name="attr_rating" min="0" placeholder="0" type="number" title="@{repeating_know_${x}_rating}"/>
+                    <input name="attr_rating" min="0" placeholder="0" type="number" title="@{repeating_knowledge_${x}_rating}"/>
                   </label>
                   <label data-i18n-title="ratingmodifier" title="Rating Modifier"><span data-i18n="ratingmodifier">Rating Modifier</span>
-                    <input name="attr_rating_modifier" placeholder="0" type="number" title="@{repeating_know_${x}_rating_modifier}"/>
+                    <input name="attr_rating_modifier" placeholder="0" type="number" title="@{repeating_knowledge_${x}_rating_modifier}"/>
                   </label>
                   <label data-i18n-title="specialization" title="specialization"> <span data-i18n="specialization">specialization</span>
-                    <input name="attr_specialization" placeholder="Specalizations" type="text" title="@{repeating_know_${x}_specialization}"/>
+                    <input name="attr_specialization" placeholder="Specalizations" type="text" title="@{repeating_knowledge_${x}_specialization}"/>
                   </label>
                   <label data-i18n-title="notes" title="notes"><span data-i18n="notes">Notes</span>
-                    <textarea name="attr_notes" value="" placeholder="Notes" title="@{repeating_know_${x}_notes}"></textarea>
+                    <textarea name="attr_notes" value="" placeholder="Notes" title="@{repeating_knowledge_${x}_notes}"></textarea>
                   </label>
                 </div>
               </fieldset>
@@ -645,12 +645,12 @@
                 <input name="attr_display_limit" type="hidden" value="Social"/>
                 <input name="attr_display_attribute" type="hidden" value="Charisma"/>
                 <input name="attr_dicepool" type="hidden" value="0"/>
-                <input class="settings-flag" name="attr_flag" type="hidden" value="settings" title="@{repeating_lang_${x}_flag}"/>
+                <input class="settings-flag" name="attr_flag" type="hidden" value="settings" title="@{repeating_language_${x}_flag}"/>
                 <div class="buttons">
                   <button class="eclipse" name="roll_skill" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[((@{dicepool}+@{attribute})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{display_limit}}}"><span name="attr_skill"></span></button>
                   <button class="eclipse" name="roll_specialization" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[((@{dicepool}+@{attribute}+2)+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Spec: @{specialization}, @{display_limit}}}"><span name="attr_specialization"></span></button>
-                </div><span class="text-align-center" name="attr_display_rating" title="@{repeating_lang_${x}_display_rating}"></span>
-                <select class="attribute-select" name="attr_attribute" title="@{repeating_lang_${x}_attribute}">
+                </div><span class="text-align-center" name="attr_display_rating" title="@{repeating_language_${x}_display_rating}"></span>
+                <select class="attribute-select" name="attr_attribute" title="@{repeating_language_${x}_attribute}">
                   <option data-i18n="body" value="@{body}">Body</option>
                   <option data-i18n="agility" value="@{agility}">Agility</option>
                   <option data-i18n="reaction" value="@{reaction}">Reaction</option>
@@ -662,7 +662,7 @@
                   <option data-i18n="magic" value="@{magic}">Magic</option>
                   <option data-i18n="resonance" value="@{resonance}">Resonance</option>
                 </select>
-                <select class="limit-select" name="attr_limit" value="physical_limit" title="@{repeating_lang_${x}_limit}">
+                <select class="limit-select" name="attr_limit" value="physical_limit" title="@{repeating_language_${x}_limit}">
                   <option value="none">-</option>
                   <option data-i18n="mental" value="@{mental_limit}">Mental</option>
                   <option data-i18n="physical" value="@{physical_limit}">Physical</option>
@@ -677,19 +677,19 @@
                 <div class="collapse"><span name="attr_notes"></span></div>
                 <div class="settings">
                   <label data-i18n-title="skill" title="skill">
-                    <input name="attr_skill" placeholder="language" type="text" title="@{repeating_lang_${x}_skill}"/>
+                    <input name="attr_skill" placeholder="language" type="text" title="@{repeating_language_${x}_skill}"/>
                   </label>
                   <label data-i18n-title="rating" title="rating">
-                    <input name="attr_rating" min="0" placeholder="0" type="number" title="@{repeating_lang_${x}_rating}"/>
+                    <input name="attr_rating" min="0" placeholder="0" type="number" title="@{repeating_language_${x}_rating}"/>
                   </label>
                   <label data-i18n-title="ratingmodifier" title="Rating Modifier"><span data-i18n="ratingmodifier">Rating Modifier</span>
-                    <input name="attr_rating_modifier" placeholder="0" type="number" title="@{repeating_lang_${x}_rating_modifier}"/>
+                    <input name="attr_rating_modifier" placeholder="0" type="number" title="@{repeating_language_${x}_rating_modifier}"/>
                   </label>
                   <label data-i18n-title="specialization" title="specialization"> <span data-i18n="specialization">specialization</span>
-                    <input name="attr_specialization" placeholder="Specalizations" type="text" title="@{repeating_lang_${x}_specialization}"/>
+                    <input name="attr_specialization" placeholder="Specalizations" type="text" title="@{repeating_language_${x}_specialization}"/>
                   </label>
                   <label data-i18n-title="notes" title="notes"><span data-i18n="notes">Notes</span>
-                    <textarea name="attr_notes" value="" placeholder="Notes" title="@{repeating_lang_${x}_notes}"></textarea>
+                    <textarea name="attr_notes" value="" placeholder="Notes" title="@{repeating_language_${x}_notes}"></textarea>
                   </label>
                 </div>
               </fieldset>
@@ -727,7 +727,7 @@
 			</div>
 			<div class="row-long cc-row">
 				<h2 data-i18n="primaryrangedweapon">Primary Ranged Weapon</h2>
-				<button type="roll" name="primary range" value="@{gm_toggle} &{template:rolls}{{header=@{primary_range_weapon}}}{{base=^{base}}}{{dice=[[((@{primary_range_weapon_skill}+@{primary_range_weapon_dicepool}+@{agility})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{primary_range_weapon_mode}, ACC @{primary_range_weapon_acc}, DV @{primary_range_weapon}, AP @{primary_range_weapon_ap}}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Primary range weapon"><span name="attr_primary_range_weapon" title="@{primary_range_weapon}"></span></button>
+				<button type="roll" name="primary range" value="@{gm_toggle} &{template:rolls}{{header=@{primary_range_weapon}}}{{base=^{base}}}{{dice=[[((@{primary_range_weapon_skill}+@{primary_range_weapon_dicepool}+@{agility})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{primary_range_weapon_mode}, ACC @{primary_range_weapon_acc}, DV @{primary_range_weapon_damage}, AP @{primary_range_weapon_ap}}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Primary range weapon"><span name="attr_primary_range_weapon" title="@{primary_range_weapon}"></span></button>
 				<!-- Ammo removal button -->
 				<button name="act_shots_remove" type="action">4</button>
 				<button type="action" name="act_primary_ammo" title="Shots Fired">
@@ -736,7 +736,7 @@
 				<button name="act_shots_add" type="action">4</button>
 			</div>
 			<div class="cc-row">
-				<h3 data-i18n="dam">Dam</h3><span name="attr_primary_range_weapon" title="@{primary_range_weapon}"></span>
+				<h3 data-i18n="dam">Dam</h3><span name="attr_primary_range_weapon_damage" title="@{primary_range_weapon_damage}"></span>
 				<h3 data-i18n="acc">ACC</h3><span name="attr_primary_range_weapon_acc" title="@{primary_range_weapon_acc}"></span>
 				<h3 data-i18n="ap">AP</h3><span name="attr_primary_range_weapon_ap" title="@{primary_range_weapon_ap}"></span>
 				<h3 data-i18n="mode">Mode</h3><span name="attr_primary_range_weapon_mode" title="@{primary_range_weapon_mode}"></span>
@@ -748,11 +748,11 @@
 			</div>
 			<div class="row-long cc-row">
 				<h2 data-i18n="primarymeleeweapon">Primary Melee Weapon</h2>
-				<button type="roll" name="primary melee" value="@{gm_toggle} &{template:rolls}{{header=@{primary_melee_weapon}}}{{base=^{base}}}{{dice=[[((@{primary_melee_weapon_skill}+@{primary_melee_weapon_dicepool}+@{agility})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=ACC @{primary_melee_weapon_acc}, DV @{primary_melee_weapon}, AP @{primary_melee_weapon_ap}, Reach @{primary_melee_weapon_reach}}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Primary melee weapon"><span name="attr_primary_melee_weapon" title="@{primary_melee_weapon}"></span></button>
+				<button type="roll" name="primary melee" value="@{gm_toggle} &{template:rolls}{{header=@{primary_melee_weapon}}}{{base=^{base}}}{{dice=[[((@{primary_melee_weapon_skill}+@{primary_melee_weapon_dicepool}+@{agility})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=ACC @{primary_melee_weapon_acc}, DV @{primary_melee_weapon_damage}, AP @{primary_melee_weapon_ap}, Reach @{primary_melee_weapon_reach}}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Primary melee weapon"><span name="attr_primary_melee_weapon" title="@{primary_melee_weapon}"></span></button>
 			</div>
 			<div class="cc-row">
 				<h3 data-i18n="reach">Reach</h3><span name="attr_primary_melee_weapon_reach" title="@{primary_melee_weapon_reach}"></span>
-				<h3 data-i18n="dam">Dam</h3><span name="attr_primary_melee_weapon" title="@{primary_melee_weapon}"></span>
+				<h3 data-i18n="dam">Dam</h3><span name="attr_primary_melee_weapon_damage" title="@{primary_melee_weapon_damage}"></span>
 				<h3 data-i18n="acc">ACC</h3><span name="attr_primary_melee_weapon_acc" title="@{primary_melee_weapon_acc}"></span>
 				<h3 data-i18n="ap">AP</h3><span name="attr_primary_melee_weapon_ap" title="@{primary_melee_weapon_ap}"></span>
 			</div>
@@ -4007,10 +4007,10 @@ const updateDerivedAttribute = derivedAttribute => {
 	        on(`change:${weap}`, (eventInfo) => {
 				const source = eventInfo.sourceAttribute;
 				const newV   = eventInfo.newValue;
-				const type   = weap.slice(-5);
+				const type   = weap.split('repeating_');
 
 	            //Setting this here for now to ensure dicepool attribute gets updated. Remove in a future update
-	        	getAttrs([`${weap}_dicepool_modifier`, `${weap}_spec`], (v) => {
+	       getAttrs([`${weap}_dicepool_modifier`, `${weap}_spec`], (v) => {
 	        		const mod = parseInt(v[`${weap}_dicepool_modifier`]) || 0;
 					const spec = parseInt(v[`${weap}_spec`]) || 0;
 					const tot = mod + spec;
@@ -4063,20 +4063,20 @@ const updateDerivedAttribute = derivedAttribute => {
 				        });
 		            };
 	           	} else if (source.includes('dicepool') || source.includes('weapon') || source.includes('damage') || source.includes('acc') || source.includes('ap') || source.includes('skill') || source.includes('reach') || source.includes('ammo') || source.includes('mode') || source.includes('recoil')) {
-					getAttrs([`${weap}_primary`, `${source}`], (v) => {
-						if (v[`${weap}_primary`] === 'primary') {
-							let update = {};
-							//This whole process needs refactored in the future. Its working for now.
-							if (source.includes('ammo')) {
-								update[`primary_${type}_weapon_ammo`]     = v[`${source}`];
-								update[`primary_${type}_weapon_ammo_max`] = v[`${source}`];
-							} else {
-								console.log(eventinfo);
-							};
+          					getAttrs([`${weap}_primary`, `${source}`], (v) => {
+          						if (v[`${weap}_primary`] === 'primary') {
+          							let update = {};
+          							//This whole process needs refactored in the future. Its working for now.
+          							if (source.includes('ammo')) {
+          								update[`primary_${type}_weapon_ammo`]     = v[`${source}`];
+          								update[`primary_${type}_weapon_ammo_max`] = v[`${source}`];
+          							} else {
+          								console.log(eventinfo);
+          							};
 
-							setAttrs(update);
-						};
-					});
+          							setAttrs(update);
+          						};
+          					});
 	            } else {
 	                 console.log("Change was not relevant.");
 	            };
