Shadowrun 5th Edition v4.1 (#5951)
* fix bug in bows

* move functions into a unit testable setup

* save progress

* refactor event handlers

* save refactor progress

* finished derived attrs

* refactor eventhandlers, start condition tracks

* refactor conditions

* continue refactor, through wounds

* add unit tests for wounds, fix bug

* update init mod

* remove excess code

* fix bugs in skills

* fix skills displays

* remove french updates

* fix weapon overwrite

* fix repeating titles

--- a/Shadowrun5thEdition/src/core.html
+++ b/Shadowrun5thEdition/src/core.html
@@ -35,7 +35,7 @@
 				<button name="act_shots_add" type="action">4</button>
 			</div>
 			<div class="cc-row">
-				<h3 data-i18n="dam">Dam</h3><span name="attr_primary_range_weapon_damage" title="@{primary_range_weapon}"></span>
+				<h3 data-i18n="dam">Dam</h3><span name="attr_primary_range_weapon_damage" title="@{primary_range_weapon_damage}"></span>
 				<h3 data-i18n="acc">ACC</h3><span name="attr_primary_range_weapon_acc" title="@{primary_range_weapon_acc}"></span>
 				<h3 data-i18n="ap">AP</h3><span name="attr_primary_range_weapon_ap" title="@{primary_range_weapon_ap}"></span>
 				<h3 data-i18n="mode">Mode</h3><span name="attr_primary_range_weapon_mode" title="@{primary_range_weapon_mode}"></span>
@@ -51,7 +51,7 @@
 			</div>
 			<div class="cc-row">
 				<h3 data-i18n="reach">Reach</h3><span name="attr_primary_melee_weapon_reach" title="@{primary_melee_weapon_reach}"></span>
-				<h3 data-i18n="dam">Dam</h3><span name="attr_primary_melee_weapon_damage" title="@{primary_melee_weapon}"></span>
+				<h3 data-i18n="dam">Dam</h3><span name="attr_primary_melee_weapon_damage" title="@{primary_melee_weapon_damage}"></span>
 				<h3 data-i18n="acc">ACC</h3><span name="attr_primary_melee_weapon_acc" title="@{primary_melee_weapon_acc}"></span>
 				<h3 data-i18n="ap">AP</h3><span name="attr_primary_melee_weapon_ap" title="@{primary_melee_weapon_ap}"></span>
 			</div>
