rename weapon specs and fix npcs

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1,5 +1,5 @@
 
-<input name="attr_version" type="hidden" value="4.1"/>
+<input name="attr_version" type="hidden" value="4.11"/>
 <input class="sheet_type" name="attr_sheet_type" type="hidden" value="pc"/>
 <input class="character-type" name="attr_flag_special" type="hidden" value="mundane"/>
 <div class="pc">
@@ -2314,7 +2314,7 @@
       <div class="rows grunt">
         <button data-i18n="initiative" name="Initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{initiative}}}{{base=^{base}}}{{dice=[[((@{initiative_mod})+@{wounds_toggle}+@{modifiers_toggle})+(@{initiative_dice})d6cf0 &{tracker}]]}}">Initiative</button>
         <label class="settings" data-i18n-title="modifier" title="modifier">
-          <input name="attr_initiative_modifier" placeholder="0" title="@{initiative_modifier}" type="number" value="0"/>
+          <input name="attr_initiative_mod_modifier" placeholder="0" title="@{initiative_modifier}" type="number" value="0"/>
         </label><span class="settings">+</span>
         <label class="settings" data-i18n-title="modifierdice" title="Modifier Dice">
           <input min="0" max="4" name="attr_initiative_dice_modifier" placeholder="0" title="@{initiative_dice_modifier}" type="number" value="0"/>
@@ -2587,12 +2587,13 @@
       <h1 data-i18n="skills">skills</h1>
       <fieldset class="repeating_active">
         <input name="attr_display_rating" type="hidden"/>
-        <input name="attr_display_specialization" type="hidden" value=""/>
+        <input name="attr_specialization" type="hidden" value=""/>
         <input name="attr_display_limit" type="hidden" value="Physical"/>
         <input name="attr_display_attribute" type="hidden" value="Agility"/>
         <input name="attr_dicepool" type="hidden" value="0"/>
+        <input name="attr_display_skill" type="hidden" value=""/>
         <input class="toggle" name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
-        <button class="eclipse" name="roll_skill" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[((@{dicepool}+@{attribute})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{display_limit}}}"><span name="attr_skill"></span></button>
+        <button class="eclipse" name="roll_skill" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[((@{dicepool}+@{attribute})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{display_limit}}}"><span name="attr_display_skill"></span></button>
         <button class="eclipse" name="roll_specialization" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[((@{dicepool}+@{attribute}+2)+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Spec: @{specialization}, @{display_limit}}}"><span name="attr_specialization"></span></button><span name="attr_display_rating"></span>
         <div class="settings">
           <h2 data-i18n="skill">Skill</h2>
@@ -2736,7 +2737,7 @@
       <h1 data-i18n="knowledgeskills">knowledgeskills</h1>
       <fieldset class="repeating_knowledge">
         <input name="attr_display_rating" type="hidden"/>
-        <input name="attr_display_specialization" type="hidden" value=""/>
+        <input name="attr_specialization" type="hidden" value=""/>
         <input name="attr_display_limit" type="hidden" value="Mental"/>
         <input name="attr_display_attribute" type="hidden" value="Logic"/>
         <input name="attr_dicepool" type="hidden" value="0"/>
@@ -2791,7 +2792,7 @@
       <h1 data-i18n="languageskills">languageskills</h1>
       <fieldset class="repeating_language">
         <input name="attr_display_rating" type="hidden"/>
-        <input name="attr_display_specialization" type="hidden" value=""/>
+        <input name="attr_specialization" type="hidden" value=""/>
         <input name="attr_display_limit" type="hidden" value="Social"/>
         <input name="attr_display_attribute" type="hidden" value="Charisma"/>
         <input name="attr_dicepool" type="hidden" value="0"/>
