--- a/Shadowrun5thEdition/src/html/skillselect.html
+++ b/Shadowrun5thEdition/src/html/skillselect.html
@@ -1,6 +1,6 @@
 <option class="option-headers" disabled="true" data-i18n="combatskills">Combat Skills</option>
-<option class="option-groups" value="Close Combat Group" data-i18n="closecombat">Close Combat Group</option>
-<option class="option-groups" value="Firearms Group" data-i18n="firearms">Firearms Group</option>
+<option class="option-groups" value="Close Combat Group" data-i18n="closecombatgroup">Close Combat Group</option>
+<option class="option-groups" value="Firearms Group" data-i18n="firearmsgroup">Firearms Group</option>
 <option value="Archery" data-i18n="archery">Archery</option>
 <option value="Automatics" data-i18n="automatics">Automatics</option>
 <option value="Blades" data-i18n="blades">Blades</option>
