- Added better output for surprise rolls. Now you can see that it tests against the value 3.
- Cleaned up a couple of empty tables and missplaced <tr> and <td>

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -111,8 +111,10 @@
     
     <div class="body">
     <div class="sheet-2colrow">
-    <div class="sheet-col"><br>
-<table style='width:225px;'><tr><td><br>
+    <div class="sheet-col">
+            <br>
+            <br>
+<table style='width:225px;'>
     <tr>
         <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">Value</td>
         <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">Current</td>
@@ -165,23 +167,26 @@
         <td><input type="number" name="attr_AChead" title="@{AChead}" class="sheet-short" /></td>
         <td></td>
         <td></td>
-    </tr></td></table>
-    </tr><br>
-    <table><tr><td><br>
+    </tr>
+</table>
+    <br>
+    <br>
+<table>
     <tr>
-        <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">Surprise</td>
-        <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">Racial</td>
-        <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">Class</td>
-        <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">Misc</td>
+        <th class="default-header">Racial</th>
+        <th class="default-header">Class</th>
+        <th class="default-header">Misc</th>
+        <th class="default-header">Surprise</th>
     </tr>
     <tr>
-        <td><button type="roll" name="roll_surprise" title="%{surprise}" value="/gmroll [[{([[1d10]]+(@{racialsurprise})+(@{classsurprise})+(@{miscsurprise})+(@{dexreact})), 1}kh1]] [Surprise Roll for @{character_name}]"></button></td>
         <td><input type="text" name="attr_racialsurprise" title="@{racialsurprise}" class="sheet-short" value="0"/></td>
         <td><input type="text" name="attr_classsurprise" title="@{classsurprise}" class="sheet-short" value="0"/></td>
         <td><input type="text" name="attr_miscsurprise" title="@{miscsurprise}" class="sheet-short" value="0"/></td>
-    </tr></td></table></tr><br>
-    <h4><b>Armor Type & Special Defenses:</b></h4><br><textarea name="attr_armortype" title="@{armortype}" width="20"></textarea><table>
-    <tr><td></td><td></td></tr></table>
+        <td><button type="roll" name="roll_surprise" title="%{surprise}" value="/gmroll [[1d10+[[(@{racialsurprise})+(@{classsurprise})+(@{miscsurprise})+(@{dexreact})+(?{Misc. bonus|0})]]]]>[[3]] [Save vs. Surprise for @{character_name}]">Roll</button></td>
+    </tr>
+</table>
+    <br>
+    <h4><b>Armor Type & Special Defenses:</b></h4><br><textarea name="attr_armortype" title="@{armortype}" width="20"></textarea>
     <hr><br>
     <h4><b>Movement</b></h4><br>
         <input type="radio" name="attr_tab3" class="sheet-tab sheet-tab15" value="1" checked/><span class="sheet-tab sheet-tab15">Basic</span>&nbsp;
